<resources>
    <string name="app_name">CS_360_AS_Project_Two_Freeman_Sands</string>
    <string name="app_version">1.0</string>
    <string name="login_title">Login</string>"
    <string name="email_label">Email</string>"
    <string name="email_hint">Enter your email</string>
    <string name="email_error">Please enter a valid email address</string>
    <string name="password_label">Password</string>
    <string name="password_hint">Enter your password</string>
    <string name="password_error">Please enter a valid password</string>
    <string name="login_button">LOGIN</string>
    <string name="login_error">Invalid email or password</string>
    <string name="login_success">Login successful</string>
    <string name="login_failed">Login failed</string>
    <string name="register_link">CREATE AN ACCOUNT</string>"
    <string name="copyright">© 2024 - Mobile2App. All rights reserved.</string>
    <string name="register_title">Register</string>"
    <string name="register_button">Create account</string>
    <string name="register_success">Registration successful</string>
    <string name="register_failed">Registration failed</string>
    <string name="register_error">Invalid email or password</string>
    <string name="product_name">Product name</string>
    <string name="product_sku">UG-19819</string>
    <string name="product_inventory">10</string>
    <string name="product_delete">DELETE</string>
    <string name="product_add">CREATE</string>
    <string name="inventory_title">Inventory Listing</string>
    <string name="notifications_title">Notifications</string>
    <string name="notifications_permissions_msg_title">Notifications are currently disabled!</string>
    <string name="notifications_enable_msg">Would you like to enable notifications?</string>
    <string name="notifications_enable_button">ENABLE</string>
    <string name="notifications_disable_button">DISABLE</string>
    <string name="notifications_enabled_msg">Notifications are currently enabled.</string>
    <string name="notifications_disabled_msg">Notifications are currently disabled.</string>
    <string name="no_notifications_msg">There are no notifications yet.</string>
    <string name="back_button">BACK</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>"
    <string name="back_to_login">Back to login</string>
    <string name="logout">Logout</string>"
    <string name="notifications">Notifications</string>
    <string name="inventory_empty">There are no items in your inventory</string>
    <string name="product_edit">Edit</string>
    <string name="product_edit_title">Edit Product</string>
    <string name="product_update">UPDATE</string>"
    <string name="product_add_title">Create Product</string>
    <string name="inventory">Inventory</string>
</resources>