<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/addDialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/product_add_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textAlignment="center"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/editTextProductName"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/product_name"
        android:inputType="textPersonName"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/editTextProductSKU"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/product_sku"
        android:inputType="text"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/editTextProductQuantity"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/product_inventory"
        android:inputType="numberDecimal"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/notifications_status_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notifications_disabled_msg"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/buttonAddProduct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/product_add"
        android:layout_marginTop="16dp"/>
</LinearLayout>
