<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/product_name" />

        <TextView
            android:id="@+id/textViewSku"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewName"
            android:textSize="14sp"
            android:text="@string/product_sku"
            android:layout_marginTop="4dp"/>

        <TextView
            android:id="@+id/textViewAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewSku"
            android:textSize="14sp"
            android:text="@string/product_inventory"
            android:layout_marginTop="4dp"/>

        <!-- Edit Button -->
        <ImageView
            android:id="@+id/buttonEdit"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_edit"
            android:layout_marginEnd="6dp"
            android:layout_toStartOf="@id/buttonDelete"
            android:contentDescription="@string/product_edit"/>

        <!-- Delete Button -->
        <ImageView
            android:id="@+id/buttonDelete"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_delete"
            android:text="@string/product_delete"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/product_delete"/>

    </RelativeLayout>
</androidx.cardview.widget.CardView>
