<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/footer"
    android:background="@color/md_theme_primary"
    android:layout_alignParentBottom="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:baselineAligned="false"
        android:weightSum="3">

        <!-- Inventory Button -->
        <LinearLayout
            android:id="@+id/inventoryContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <ImageView
                android:id="@+id/inventoryButton"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_inventory"
                app:tint="@color/md_theme_onPrimary" />
            <TextView
                android:id="@+id/inventoryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inventory"
                android:textColor="@color/md_theme_onPrimary"/>
        </LinearLayout>

        <!-- Notification Button -->
        <LinearLayout
            android:id="@+id/notificationContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <ImageView
                android:id="@+id/imageViewNotification"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_notifications"
                app:tint="@color/md_theme_onPrimary" />
            <TextView
                android:id="@+id/notificationText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notifications"
                android:textColor="@color/md_theme_onPrimary" />
        </LinearLayout>

        <!-- Logout Button -->
        <LinearLayout
            android:id="@+id/logoutContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <ImageView
                android:id="@+id/logoutButton"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_logout"
                app:tint="@color/md_theme_onPrimary" />
            <TextView
                android:id="@+id/logoutText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:textColor="@color/md_theme_onPrimary"/>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>

